--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
             <div class="cont-extra">
                 <div class="ind-extra">
                     <img src="img/abeja.gif" alt="">
-                   <h3>Name</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, voluptates.</p>
+                   <h3>Diseño</h3>
+                    <p>Se opto por la estética retro con personajes únicos y con escenarios tetricos.</p>
                 </div>
                 <div class="ind-extra">
                     <img src="img/Celeste-Madeline-by-awh13-on-D-unscreen.gif" alt="">
-                   <h3>Name</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, voluptates.</p>
+                   <h3>Modos</h3>
+                    <p>Puedes jugar solo o invitar a tus amigos para que las pistas sean más fáciles de encontrar.</p>
                 </div>
                 <div class="ind-extra">
                     <img src="img/gatt.png" alt="">
-                   <h3>Name</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, voluptates.</p>
+                   <h3>Estreno</h3>
+                    <p>Se lanzará este 31 de octubre para dispositivos IOS y android</p>
                 </div>
             </div>
         </div>
