--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section class="contenedor sobre-nosotros" id="acerca">
-            <h2 class="titulo">*nombre juego*c:</h2>
+            <h2 class="titulo">waiting for the night...</h2>
             <div class="contenedor-sobre-nosotros">
                 <img src="img/fantasma.gif" alt="" class="imagen-sobre-proyecto">
                 <div class="contenido-textos">
