--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 <P>vdiazv1@miumg.edu.gt</P>
             </div>
             <div class="contenedor-ftexto">
-                <h4>LOCATION</h4>
-                <p>12345678910</p>
+                <h4>TELÉFONO</h4>
+                <p>51141932</p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; Vanesa Díaz | UMG</h2>
